fix some lint errors.